# pgpilot

./: .gitignore  0-intro.html  1-installation.html  10-security-plan.html  10-security.html  10-settings.html  11-settings.html  2-quickstart.html  3-key-management.html  4-keyserver.html  404.html  5-file-operations.html  6-smartcard.html  7-chat.html  7-faq.html  8-faq.html  8-troubleshooting.html  9-security.html  9-troubleshooting.html  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  Justfile  PROCEDURE_PLANS.md  README.md  THREAT_MODEL.md  cliff.toml  flake.nix  index.html  print.html  renovate.json  searcher-c2a407aa.js  searchindex-2f8bd295.js  searchindex-81af80cd.js  searchindex-a5fbf968.js  searchindex-ff1e9e42.js  toc-002d9d84.js  toc-9876385f.js  toc-a800ce08.js  (+1 more)
.claude/plans/: README.md
.claude/plans/v0.10.0/: manual_tests.md  phase0_results.md  plan.md
.claude/plans/v0.5.0/: README.md  axe1-documentation.md  axe2-i18n.md  axe3-tests.md  axe4-desktop-assets.md
.claude/plans/v0.6.0/: README.md  axe0-audit-ui.md  axe0-spec-cards.md  axe0-ui-harmonisation.md  axe1-i18n.md  axe10-doc.md  axe2-chat-architecture.md  axe2-spec-api.md  axe2-spec-finale.md  axe2-spec-modules.md  axe3-chat-transport.md  axe4-chat-core.md  axe5-chat-ui.md  axe5-ui-spec.md  axe6-chat-presence-ack.md  axe7-chat-securite.md  axe8-chat-tests.md  axe9-utilitaires.md
.claude/plans/v0.7.0/: README.md  axe1-ussr-theme-v2.md
.claude/plans/v0.8.0/: INDEX.md  README.md  agents.md  audit-report.md  innovations.md  phases.md  security.md  tech-choices.md
.claude/plans/v0.8.9/: manual_tests.md  phase0_results.md  plan.md
.claude/plans/v0.9.0/: manual_tests.md  phase0_results.md  plan.md
.claude/plans/v0.9.1/: manual_tests.md  phase0_results.md  plan.md
.github/workflows/: ci.yml  deploy-docs.yml  docs.yml  release.yml
app/: .eslintrc.cjs  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.test.json  vite.config.ts
app/.storybook/: preview.ts
app/playwright-report/: index.html
app/scripts/: screenshots.mjs
app/src/: App.tsx  design-tokens.json
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  main.rs
app/src/components/: Alert.module.css  Alert.tsx  Badge.module.css  Button.module.css  Button.stories.tsx  Button.tsx  Card.module.css  Card.stories.tsx  Card.tsx  Checkbox.module.css  Checkbox.tsx  KeyDetail.tsx  Modal.module.css  Select.module.css  Select.tsx  SubkeyCard.tsx  Tabs.stories.tsx  Tabs.tsx  Tooltip.tsx  UssrBanner.tsx
app/src/hooks/: useAsync.ts  useChatEvents.ts  useKeys.ts
app/src/ipc/: chat.ts  keys.ts
app/src/layout/: AppLayout.module.css  AppLayout.tsx
app/src/lib/: mock-dialog.ts  mock-event.ts  mock-tauri.ts
app/src/pages/: Chat.module.css  Chat.tsx  CreateKey.tsx  Encrypt.tsx  Health.module.css  Health.tsx  Import.tsx  MyKeys.module.css  MyKeys.tsx  PublicKeys.tsx  Settings.module.css  Sign.tsx  Verify.tsx
app/src/store/: config.ts  ui.ts
app/src/styles/: theme.css
app/src/types/: ipc.ts
app/tests/e2e/: create-key.spec.ts  encrypt.spec.ts  env.d.ts  key-detail.spec.ts  my-keys.spec.ts  ussr-theme.spec.ts
book/: book.toml
book/book/: 1-installation.html  2-quickstart.html  3-key-management.html  4-keyserver.html  404.html  5-file-operations.html  6-smartcard.html  7-faq.html  8-troubleshooting.html  9-security.html  index.html  print.html  searcher-c2a407aa.js  searchindex-66b4901b.js  toc-57d3ded2.js  toc.html
book/src/: 0-intro.md  1-installation.md  10-security-plan.md  10-security.md  11-settings.md  2-quickstart.md  3-key-management.md  4-keyserver.md  5-file-operations.md  6-smartcard.md  7-chat.md  7-faq.md  8-faq.md  8-troubleshooting.md  9-security.md  9-troubleshooting.md  SUMMARY.md
checks/rustfmt/: default.nix
docs/: .gitignore  BUILD_REPORT.md  MIGRATION_NOTES.md  README.md  astro.config.mjs  package-lock.json  package.json
modules/home/pgpilot/: default.nix
share/applications/: pgpilot.desktop
shells/default/: default.nix
src/: app.rs  lib.rs  main.rs
src/app/: card.rs  chat.rs  create.rs  decrypt.rs  encrypt.rs  export.rs  import.rs  keyserver.rs  mod.rs  nav.rs  settings.rs  sign.rs  subkeys.rs
src/chat/: crypto.rs  error.rs  mod.rs  mqtt.rs  presence.rs  rooms.rs  wire.rs
src/config/: mod.rs
src/gpg/: card.rs  health.rs  keyring.rs  mod.rs  types.rs
src/i18n/: english.rs  french.rs  mod.rs
src/ui/: button_styles.rs  chat.rs  chat_modals.rs  common.rs  create_key.rs  decrypt.rs  encrypt.rs  health.rs  import.rs  key_detail.rs  key_list.rs  mod.rs  settings.rs  sign.rs  theme.rs  ussr_assets.rs  verify.rs
tauri-app/: package-lock.json  vite.config.ts
tauri-app/scripts/: screenshots.mjs
tauri-app/src-tauri/: Cargo.toml
tauri-app/src-tauri/src/: lib.rs
tauri-app/src/components/: Alert.stories.tsx  Badge.stories.tsx  Badge.tsx  Checkbox.stories.tsx  Input.module.css  Input.stories.tsx  Input.tsx  KeyDetail.module.css  KeyListRow.module.css  KeyListRow.tsx  Modal.stories.tsx  Modal.tsx  Select.stories.tsx  SubkeyCard.module.css  Tabs.module.css  Tooltip.module.css  Tooltip.stories.tsx  UssrBanner.module.css  index.ts
tauri-app/src/hooks/: useAsync.ts  useKeys.ts
tauri-app/src/ipc/: keys.ts
tauri-app/src/lib/: mock-dialog.ts
tauri-app/src/pages/: CreateKey.module.css  Decrypt.module.css  Decrypt.tsx  Encrypt.module.css  Import.module.css  Settings.tsx  Sign.module.css  Verify.module.css
tauri-app/src/store/: chat.ts  keys.ts
tauri-app/src/types/: index.ts
tests/: app_chat.rs  app_handlers.rs  chat_crypto.rs  chat_mqtt.rs  chat_presence.rs  chat_rooms.rs  chat_wire.rs  gpg_card.rs  gpg_keyring.rs  i18n.rs
tests/common/: mod.rs
tests/fixtures/: mod.rs  test_public.asc  test_secret.asc  third_party_public.asc
(+30 files in other folders)
