[workspace]
members  = ["app/src-tauri"]
resolver = "2"

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
strip         = "debuginfo"
panic         = "abort"

[profile.dev]
opt-level = 0
debug     = true

[package]
name = "pgpilot"
version = "0.8.8"
edition = "2021"

[features]
default = ["chat"]
chat = [
  "rumqttc",
  "rustls",
  "webpki-roots",
  "async-trait",
]
rumqttc = ["dep:rumqttc"]

[dependencies]
anyhow           = "1"
base64           = "0.22"
chrono           = { version = "0.4", features = ["serde"] }
dirs             = "6"
percent-encoding = "2"
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
serde_yaml       = "0.9"
sequoia-openpgp  = { version = "2", default-features = false, features = ["crypto-nettle"] }
sha2             = "0.11"
tempfile         = "3"
thiserror        = "2"
tokio            = { version = "1", features = ["full"] }
ureq             = "3"
uuid             = { version = "1", features = ["v4", "serde"] }

# Optionnels (chat chiffré MQTT)
async-trait  = { version = "0.1", optional = true }
rumqttc      = { version = "0.25", features = ["use-rustls"], optional = true }
rustls       = { version = "0.23", features = ["ring"], optional = true }
webpki-roots = { version = "1.0", optional = true }

[dev-dependencies]
tempfile = "3"
