[workspace]
members  = ["app/src-tauri"]
resolver = "2"

[workspace.dependencies]
chrono     = { version = "0.4", features = ["serde"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tokio      = "1"
uuid       = { version = "1", features = ["v4", "serde"] }

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
strip         = "debuginfo"
panic         = "abort"

[profile.dev]
opt-level = 0
debug     = true

[package]
name = "pgpilot"
version = "0.10.0"
edition = "2021"

[features]
default = ["chat"]
chat = [
  "rumqttc",
  "rustls",
  "webpki-roots",
  "async-trait",
]
rumqttc = ["dep:rumqttc"]

[dependencies]
anyhow           = "1"
base64           = "0.22"
chrono           = { workspace = true }
dirs             = "6"
percent-encoding = "2"
serde            = { workspace = true }
serde_json       = { workspace = true }
serde_yaml       = "0.9"
sequoia-openpgp  = { version = "2", default-features = false, features = ["crypto-nettle"] }
sha2             = "0.11"
tempfile         = "3"
thiserror        = "2"
tokio            = { workspace = true, features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
ureq             = "3"
uuid             = { workspace = true }

# Optionnels (chat chiffré MQTT)
async-trait  = { version = "0.1", optional = true }
rumqttc      = { version = "0.25", features = ["use-rustls"], optional = true }
rustls       = { version = "0.23", features = ["ring"], optional = true }
webpki-roots = { version = "1.0", optional = true }

[dev-dependencies]
