[package]
name    = "pgpilot-app"
version = "0.8.7"
edition = "2021"

[lib]
name = "pgpilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono              = "0.4"
tauri               = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
tokio               = { version = "1", features = ["rt-multi-thread"] }
pgpilot             = { path = "../..", default-features = false, features = ["chat"] }
uuid                = { version = "1", features = ["v4"] }
