[package]
name    = "pgpilot-app"
version = "0.9.0"
edition = "2021"

[lib]
name = "pgpilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono              = { workspace = true }
tauri               = { version = "2", features = [] }
tauri-plugin-dialog = { version = "2", default-features = false, features = ["xdg-portal"] }
serde               = { workspace = true }
serde_json          = { workspace = true }
tokio               = { workspace = true, features = ["rt-multi-thread"] }
pgpilot             = { path = "../..", default-features = false, features = ["chat"] }
uuid                = { workspace = true }
